# mcp-unified-server

./: Dockerfile  README.md  main.py  pyproject.toml  server.yaml
src/mcp_server_qdrant/: jetbrains_proxy.py  main.py  mcp_server.py  qdrant.py  server.py  settings.py  task_manager.py  web_research.py  web_research_fixed.py
src/mcp_server_qdrant/common/: filters.py  wrap_filters.py
src/mcp_server_qdrant/embeddings/: fastembed.py
